chore: update plugin in pom.xml
Author: mrtripop